# ib-static-analyzer

./: .gitigonre  README.md  install.ps1  install.sh  pyproject.toml
astguard/: __init__.py  analyzer.py  main.py  reporter.py  vulnerabilities.py
tests/: vulnerability_samples.py
