[project]
name = "astguard"
version = "0.1.0"
description = "A static security analyzer for Python code using AST"
authors = [
    { name = "Timofey"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tomli; python_version < '3.11'",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[project.scripts]
astguard = "astguard.main:main"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
exclude = [
    "__init__.py",
    "tests/*",
    "examples/*",
]
ignore = [
    "D203",    # 1 blank line required before class docstring (conflict with D211)
    "D213",    # Multi-line docstring summary should start at the second line
    "T201",    # print found
    "COM812",  # Missing trailing comma (formatter conflict)
    "ISC001",  # Implicit string concatenation (formatter conflict)
    "RUF001",
    "RUF002",
    "RUF003",
    "FA100",   # Missing from __future__ import annotations
    "FA102",   # Missing from __future__ import annotations
    "PERF203", # try-except within a loop (performance overhead is acceptable here)
]

[tool.astguard]
include = ["*"]
exclude = [".venv/*", "venv/*", ]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
